# search-rl

./: .gitignore  PROJECT_OVERVIEW.md  README.md  benchmark.py  debug_reformulator.py  eval.py  generate_queries.py  project_status.md  pyproject.toml  train.py
.github/instructions/: instructions.md
checkpoints/: policy_final.pt
checkpoints_fiqa_optimized/: policy_1000.pt
checkpoints_v2/: policy_final.pt
checkpoints_v3/: policy_final.pt
checkpoints_v4_curriculum/: policy_final.pt
runs_fiqa/: events.out.tfevents.1765130902.charizard.574342.0
runs_fiqa_optimized/: events.out.tfevents.1765174823.charizard.602567.0  events.out.tfevents.1765175051.charizard.602847.0
runs_v2/: events.out.tfevents.1765036316.charizard.513242.0
runs_v3/: events.out.tfevents.1765046799.charizard.520175.0  events.out.tfevents.1765085317.charizard.543145.0
runs_v4_curriculum/: events.out.tfevents.1765092881.charizard.548234.0
src/: config.py  data.py  environment.py  evaluation.py  policy.py  ppo.py  query_gen.py  reformulator.py  retriever.py  reward.py  utils.py
